--- a/src/languages/pt-BR.json
+++ b/src/languages/pt-BR.json
@@ -10,5 +10,8 @@
     "profilePhrase1": "Ola, meu nome é",
     "profilePhrase2": "Jhoni Giacomolli",
     "profilePhrase3": "Eu sou desenvolvedor web e designer, trabalhando com construção de websites e tornando seus sonhos realidade desde 2018",
-    "profileButton": "Entre em contato"
+    "profileButton": "Entre em contato",
+    "titleWorks": "Meus Trabalhos",
+    "titleSkills": "Minhas Habilidades",
+    "titleContact": "Mais Contatos"
 }
