Create skills section and skill component

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -13,5 +13,6 @@
     "profileButton": "Contact me",
     "titleWorks": "My Works",
     "titleSkills": "My Skills",
-    "titleContact": "More Contacts"
+    "titleContact": "More Contacts",
+    "worksButton": "See more"
 }
