--- a/src/languages/pt-BR.json
+++ b/src/languages/pt-BR.json
@@ -13,5 +13,6 @@
     "profileButton": "Entre em contato",
     "titleWorks": "Meus Trabalhos",
     "titleSkills": "Minhas Habilidades",
-    "titleContact": "Mais Contatos"
+    "titleContact": "Mais Contatos",
+    "worksButton": "Veja mais"
 }
