--- a/src/languages/pt-BR.json
+++ b/src/languages/pt-BR.json
@@ -21,5 +21,6 @@
     "contactInputPhone": "Seu telefone",
     "contactInputSubject": "Assunto",
     "contactInputMessage": "Mensagem",
-    "contactButton": "Enviar"
+    "contactButton": "Enviar",
+    "copyrightMessage": "Direito Autoral 2021 - Todos os direitos reservados - Desenvolvido por"
 }
